# rapidbyte

./: .gitignore  CLAUDE.md  CODING_STYLE.md  CONTRIBUTING.md  Cargo.toml  IDEA.md  IMPROVEMENTS.md  Justfile  LICENSE  PERF_ANALYSIS.md  README.md  REFACTORING_PRINCIPLES.md  TROUBLESHOOTING.md  docker-compose.yml  ficzers1.md
benchmarks/: Cargo.toml  baseline.md  baseline_100k.jsonl  baseline_10k.jsonl  docker-compose.yml  post_p0_typedcol.jsonl  post_p2_bundle.jsonl  post_quick_wins.jsonl
benchmarks/analysis/: README.md  compare.py  requirements.txt  schema.sql
benchmarks/analysis/tests/: test_compare.py
benchmarks/baselines/main/: pr.jsonl
benchmarks/environments/: local-bench-distributed-postgres.yaml  local-bench-postgres.yaml
benchmarks/fixtures/legacy/: README.md
benchmarks/fixtures/legacy/sql/: bench_seed_large.sql  bench_seed_medium.sql  bench_seed_small.sql
benchmarks/scenarios/: README.md
benchmarks/scenarios/lab/: pg_dest_copy.yaml  pg_dest_copy_regression.yaml  pg_dest_copy_release.yaml  pg_dest_copy_release_distributed.yaml  pg_dest_insert.yaml
benchmarks/scenarios/pr/: README.md  smoke.yaml
benchmarks/src/: artifact.rs  cli.rs  compare.rs  environment.rs  isolation.rs  main.rs  metrics.rs  output.rs  pipeline.rs  runner.rs  scenario.rs  summary.rs  workload.rs
benchmarks/src/adapters/: mod.rs
connectors/dest-postgres/: Cargo.toml  build.rs  config_schema.json  manifest.json
connectors/dest-postgres/src/: batch.rs  client.rs  config.rs  copy.rs  ddl.rs  decode.rs  format.rs  insert.rs  loader.rs  main.rs  sink.rs  type_map.rs  watermark.rs  writer.rs
connectors/dest-postgres/src/batch/: copy.rs  copy_format.rs  insert.rs  mod.rs  typed_col.rs
connectors/dest-postgres/src/ddl/: drift.rs  mod.rs  staging.rs  type_map.rs
connectors/source-postgres/: Cargo.toml  build.rs  config_schema.json  manifest.json
connectors/source-postgres/.cargo/: config.toml
connectors/source-postgres/src/: arrow_util.rs  cdc.rs  client.rs  config.rs  cursor.rs  discovery.rs  encode.rs  identifier.rs  main.rs  metrics.rs  query.rs  reader.rs  schema.rs  source.rs  types.rs
connectors/source-postgres/src/cdc/: encode.rs  mod.rs  parser.rs  pgoutput.rs
connectors/source-postgres/src/reader/: arrow_encode.rs  mod.rs  query.rs
connectors/transform-validate/: Cargo.toml  build.rs
connectors/transform-validate/.cargo/: config.toml
connectors/transform-validate/src/: config.rs  main.rs  transform.rs
crates/rapidbyte-api/: Cargo.toml
crates/rapidbyte-api/src/: context.rs  error.rs  lib.rs  run_manager.rs  testing.rs  types.rs
crates/rapidbyte-api/src/services/: connection.rs  (+6 more)
crates/rapidbyte-cli/: Cargo.toml
crates/rapidbyte-cli/src/: logging.rs  main.rs
crates/rapidbyte-cli/tests/: distributed.rs
crates/rapidbyte-controller/: Cargo.toml  build.rs
crates/rapidbyte-controller/migrations/: 0001_initial.sql  0002_create_run_logs.sql  0003_create_pipeline_states.sql  0004_add_task_operation.sql  0005_add_task_operation_check.sql  0006_add_run_metadata.sql  0007_add_agent_supported_operations.sql
crates/rapidbyte-controller/src/: agent_service.rs  config.rs  lease.rs  lib.rs  middleware.rs  pipeline_service.rs  preview.rs  proto.rs  registry.rs  run_state.rs  scheduler.rs  server.rs  state.rs  terminal.rs  watcher.rs
crates/rapidbyte-controller/tests/: postgres.rs  rest.rs  v2.rs
crates/rapidbyte-core/: Cargo.toml
crates/rapidbyte-core/benches/: arrow_codec.rs  state_backend.rs
crates/rapidbyte-core/src/: arrow_utils.rs  lib.rs
crates/rapidbyte-core/tests/: pipeline_integration.rs  wasmedge_spike.rs
crates/rapidbyte-dev/: Cargo.toml
crates/rapidbyte-dev/src/: lib.rs  repl.rs
crates/rapidbyte-engine/: Cargo.toml
crates/rapidbyte-engine/.cargo/: config.toml
crates/rapidbyte-engine/migrations/: 0002_engine_state.sql
crates/rapidbyte-engine/src/: arrow.rs  autotune.rs  checkpoint.rs  error.rs  execution.rs  lib.rs  orchestrator.rs  outcome.rs  progress.rs  resolve.rs  result.rs  runner.rs
crates/rapidbyte-engine/tests/: pipeline_integration.rs  policy_proptest.rs  postgres_integration.rs  resolve_visibility.rs  wasm_runner_integration.rs
crates/rapidbyte-metrics/: Cargo.toml
crates/rapidbyte-metrics/src/: cache.rs  grpc_layer.rs  instruments.rs  labels.rs  lib.rs  plugin_names.rs  snapshot.rs  test_support.rs  views.rs
crates/rapidbyte-pipeline-config/: Cargo.toml
crates/rapidbyte-pipeline-config/src/: lib.rs  parser.rs  types.rs  validator.rs
crates/rapidbyte-registry/: Cargo.toml
crates/rapidbyte-registry/src/: artifact.rs  cache.rs  client.rs  index.rs  lib.rs  reference.rs  signing.rs  trust.rs  verify.rs
crates/rapidbyte-registry/tests/: integration.rs
crates/rapidbyte-runtime/: Cargo.toml
crates/rapidbyte-runtime/src/: acl.rs  bindings.rs  compression.rs  connector.rs  engine.rs  error.rs  frame.rs  host_state.rs  lib.rs  plugin.rs  sandbox.rs  socket.rs
crates/rapidbyte-sdk/: Cargo.toml
crates/rapidbyte-sdk/macros/: Cargo.toml
crates/rapidbyte-sdk/src/: build.rs  capabilities.rs  connector.rs  context.rs  errors.rs  features.rs  frame_writer.rs  host_ffi.rs  host_tcp.rs  input.rs  lib.rs  manifest.rs  memory.rs  plugin.rs  prelude.rs  protocol.rs  testing.rs  validation.rs
crates/rapidbyte-secrets/: Cargo.toml
crates/rapidbyte-secrets/src/: lib.rs  vault.rs
crates/rapidbyte-secrets/tests/: integration.rs
crates/rapidbyte-state/: Cargo.toml
crates/rapidbyte-state/benches/: state_backend.rs
crates/rapidbyte-state/src/: backend.rs  error.rs  lib.rs  postgres.rs  schema.rs  sqlite.rs
crates/rapidbyte-types/: Cargo.toml
crates/rapidbyte-types/src/: arrow.rs  batch.rs  catalog.rs  checkpoint.rs  compression.rs  cursor.rs  discovery.rs  envelope.rs  error.rs  errors.rs  lib.rs  lifecycle.rs  manifest.rs  metric.rs  run.rs  schema.rs  state.rs  state_backend.rs  state_error.rs  stream.rs  validation.rs  wire.rs
plugins/tests/test-source/: Cargo.toml  build.rs
tests/bench/: Cargo.toml  analyze.py
tests/bench/src/: main.rs
tests/plugin-ui/transform-old-context/: Cargo.toml  build.rs
(+752 files in other folders)
