[package]
name = "source-postgres"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "source_postgres"
path = "src/main.rs"

[dependencies]
rapidbyte-sdk = { path = "../../crates/rapidbyte-sdk" }
tokio = { version = "1.36", default-features = false, features = ["rt", "macros", "io-util"] }
tokio-postgres = { version = "0.7.16", default-features = false, features = ["with-serde_json-1"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
arrow = { version = "53", features = ["ipc"] }
chrono = "0.4"
anyhow = "1"
wit-bindgen = "0.46"

[patch.crates-io]
whoami = { path = "../../crates/whoami-shim" }

[workspace]
