[package]
name = "rapidbyte-cli"
version.workspace = true
edition.workspace = true

[[bin]]
name = "rapidbyte"
path = "src/main.rs"

[dependencies]
rapidbyte-agent = { path = "../rapidbyte-agent" }
rapidbyte-api = { path = "../rapidbyte-api" }
rapidbyte-controller = { path = "../rapidbyte-controller" }
rapidbyte-metrics = { path = "../rapidbyte-metrics" }
rapidbyte-dev = { path = "../rapidbyte-dev" }
rapidbyte-engine = { path = "../rapidbyte-engine" }
rapidbyte-pipeline-config = { path = "../rapidbyte-pipeline-config" }
rapidbyte-secrets = { path = "../rapidbyte-secrets" }
rapidbyte-registry = { path = "../rapidbyte-registry" }
rapidbyte-runtime = { path = "../rapidbyte-runtime" }
rapidbyte-types = { path = "../rapidbyte-types" }
axum = { workspace = true }
axum-extra = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
async-stream = { workspace = true }
futures = { workspace = true }
serde = { workspace = true }
http = { workspace = true }
tokio = { workspace = true }
tokio-util = { workspace = true }
clap = { workspace = true }
anyhow = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tracing-opentelemetry = { workspace = true }
opentelemetry = { workspace = true }
tonic = { workspace = true }
rustls = { workspace = true }
uuid = { workspace = true }
serde_yaml = { workspace = true }
arrow = { version = "53", features = ["prettyprint"] }
arrow-flight = { workspace = true }
tokio-stream = { workspace = true }
libc = "0.2"
indicatif = { workspace = true }
console = { workspace = true }
chrono = { workspace = true }

[dev-dependencies]
tempfile = "3"
syn = { version = "2", features = ["full", "parsing"] }
tokio-postgres = { workspace = true }
