[package]
name = "rapidbyte-controller"
version.workspace = true
edition.workspace = true

[dependencies]
rapidbyte-types = { path = "../rapidbyte-types" }
rapidbyte-pipeline-config = { path = "../rapidbyte-pipeline-config" }
rapidbyte-secrets = { path = "../rapidbyte-secrets" }
rapidbyte-metrics = { path = "../rapidbyte-metrics" }
opentelemetry = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
tonic = { workspace = true }
prost = { workspace = true }
prost-types = { workspace = true }
tokio = { workspace = true }
uuid = { workspace = true }
tracing = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tokio-stream = { workspace = true }
tower = { workspace = true }
chrono = { workspace = true }
async-trait = { workspace = true }
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "postgres", "chrono", "migrate"] }

[build-dependencies]
tonic-build = { workspace = true }
protoc-bin-vendored = { workspace = true }

[dev-dependencies]
opentelemetry_sdk = { workspace = true }

[lints.clippy]
pedantic = { level = "warn", priority = -1 }
