[package]
name = "rapidbyte-core"
version.workspace = true
edition.workspace = true

[dependencies]
rapidbyte-types = { path = "../rapidbyte-types" }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
arrow = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
rusqlite = { workspace = true }
chrono = { workspace = true }
regex = "1"
wasmtime = "41.0.3"
wasmtime-wasi = "41.0.3"
sha2 = "0.10"
jsonschema = "0.28"
lz4_flex = "0.11"
zstd = "0.13"

[dev-dependencies]
tempfile = "3"
criterion = { workspace = true }

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[[bench]]
name = "arrow_codec"
harness = false

[[bench]]
name = "state_backend"
harness = false
