[package]
name = "rapidbyte-core"
version.workspace = true
edition.workspace = true

[dependencies]
rapidbyte-types = { path = "../rapidbyte-types" }
rapidbyte-runtime = { path = "../rapidbyte-runtime" }
rapidbyte-state = { path = "../rapidbyte-state", features = ["postgres"] }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
arrow = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
chrono = { workspace = true }
regex = "1"
jsonschema = "0.28"

[dev-dependencies]
tempfile = "3"
criterion = { workspace = true }

[[bench]]
name = "arrow_codec"
harness = false
