[package]
name = "rapidbyte-dev"
version.workspace = true
edition.workspace = true

[dependencies]
rapidbyte-engine = { path = "../rapidbyte-engine" }
rapidbyte-runtime = { path = "../rapidbyte-runtime" }
rapidbyte-types = { path = "../rapidbyte-types" }
rapidbyte-state = { path = "../rapidbyte-state" }
tokio = { workspace = true }
arrow = { version = "53", features = ["prettyprint"] }
datafusion = "43"
reedline = "0.38"
anyhow = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
console = { workspace = true }
indicatif = { workspace = true }
