[package]
name = "rapidbyte-engine"
version.workspace = true
edition.workspace = true

[dependencies]
rapidbyte-types = { path = "../rapidbyte-types" }
rapidbyte-runtime = { path = "../rapidbyte-runtime" }
rapidbyte-registry = { path = "../rapidbyte-registry" }
rapidbyte-metrics = { path = "../rapidbyte-metrics" }
rapidbyte-state = { path = "../rapidbyte-state", features = ["postgres"] }
opentelemetry = { workspace = true }
opentelemetry_sdk = { workspace = true }
tokio = { workspace = true }
tokio-util = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
arrow = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
chrono = { workspace = true }
regex = "1"
jsonschema = "0.28"
rapidbyte-secrets = { path = "../rapidbyte-secrets" }

[dev-dependencies]
bytes = "1"
tempfile = "3"
criterion = { workspace = true }
proptest = "1"
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }

[[bench]]
name = "arrow_codec"
harness = false
