[package]
name = "rapidbyte-metrics"
version.workspace = true
edition.workspace = true

[dependencies]
rapidbyte-types = { path = "../rapidbyte-types" }
anyhow = { workspace = true }
opentelemetry = { workspace = true }
opentelemetry_sdk = { workspace = true }
opentelemetry-otlp = { workspace = true }
opentelemetry-prometheus = { workspace = true }
prometheus = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
dashmap = { workspace = true }
serde_json = { workspace = true }
http = { workspace = true }
tower = { workspace = true }
tonic = { workspace = true }

[lints.clippy]
pedantic = { level = "warn", priority = -1 }
