[package]
name = "rapidbyte-registry"
version.workspace = true
edition.workspace = true

[dependencies]
anyhow = { workspace = true }
rapidbyte-types = { path = "../rapidbyte-types" }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
sha2 = { workspace = true }
hex = "0.4"
dirs = "6"
tracing = { workspace = true }
tokio = { workspace = true }
oci-client = { workspace = true }
chrono = { workspace = true }
semver = "1"
ed25519-dalek = { workspace = true }
rand = { workspace = true }

[dev-dependencies]
tempfile = "3"
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
