[package]
name = "rapidbyte-sdk"
version.workspace = true
edition.workspace = true

[dependencies]
rapidbyte-types = { path = "../rapidbyte-types" }
serde = { workspace = true }
serde_json = { workspace = true }
# Keep SDK tokio features minimal so wasm connectors don't inherit host-only
# runtime/network features via workspace defaults.
tokio = { version = "1.36", default-features = false, features = ["io-util"] }
wit-bindgen = "0.46"
