[package]
name = "rapidbyte-state"
version.workspace = true
edition.workspace = true

[dependencies]
rapidbyte-types = { path = "../rapidbyte-types" }
chrono = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }

# Optional backends
rusqlite = { workspace = true, optional = true }
postgres = { workspace = true, optional = true }

[dev-dependencies]
criterion = { workspace = true }

[features]
default = ["sqlite"]
sqlite = ["dep:rusqlite"]
postgres = ["dep:postgres"]

[[bench]]
name = "state_backend"
harness = false
required-features = ["sqlite"]

[lints.clippy]
pedantic = { level = "warn", priority = -1 }
