[package]
name = "rapidbyte-types"
version.workspace = true
edition.workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
arrow = { workspace = true }
anyhow = { workspace = true }

[lints.clippy]
pedantic = { level = "warn", priority = -1 }
