[package]
name = "rapidbyte-bench"
version = "0.1.0"
edition = "2021"
publish = false

[workspace]

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
once_cell = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
tempfile = "3"
testcontainers = "0.15"
tokio = { version = "1.36", features = ["macros", "rt-multi-thread"] }
tokio-postgres = "0.7"
