[package]
name = "rapidbyte-sdk-macros"
version.workspace = true
edition.workspace = true

[lib]
proc-macro = true

[dependencies]
syn = { version = "2", features = ["full", "extra-traits", "parsing"] }
quote = "1"
proc-macro2 = "1"
serde_json = "1"

[dev-dependencies]
rapidbyte-sdk = { path = ".." }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
